--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
           <div class="form-row">
             <label for="area">Área de práctica</label>
             <select id="area">
-              <option value="Soporte técnico">Soporte técnico</option>
-              <option value="Papelería Tenshi">Papelería Tenshi</option>
+              <option value="Técnico en Informática">Técnico en Informática</option>
+              <option value="Diseño Grafico Asistido por Computadora">Diseño Grafico Asistido por Computadora</option>
             </select>
           </div>
 
@@ -381,3 +381,4 @@
   </script>
 </body>
 </html>
+
