--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div class="contenedor">
+    <div cllas="login">
+      <img src="images/logo-tenshi.png" alt="Logo Tenshi" class="logo">
   <main class="container" role="main">
     <!-- Area de login -->
     <section id="loginSection" class="card center">
@@ -381,4 +384,5 @@
   </script>
 </body>
 </html>
+
 
