--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <div class="form-row">
           <label for="area">Área de práctica</label>
           <select id="area">
-            <option value="Soporte técnico">Soporte técnico</option>
-            <option value="Diseño grafico asistido por computadora">Diseño grafico asistido por computadora</option>
+            <option value="Técnico en Informática">Técnico en Informática</option>
+            <option value="Técnico en  Diseño Grafico Asistido por Computadora">Técnico en Diseño Grafico Asistido por Computadora</option>
           </select>
         </div>
       </aside>
@@ -276,5 +276,6 @@ input[type="text"],input[type="password"],select{padding:10px 12px;border-radius
 .logo{width:80px;margin-bottom:12px;}
 .hidden{display:none;}
 @media(max-width:980px){.grid{grid-template-columns:1fr;}}
+
 
 
